# onboarding-chatapp

./: .env.example  .gitignore  ARCHITECTURE.md  README.md  package.json  pnpm-lock.yaml  vercel.json
apps/mcp-http-server/: Dockerfile  package.json
apps/mcp-http-server/src/: index.ts
apps/mcp-server/: Cargo.toml
apps/mcp-server/src/: main.rs
apps/mcp-server/src/tools/: calculate.rs  mod.rs  time.rs  weather.rs
apps/web/: .env.local.example  next.config.ts  package.json  tailwind.config.ts  tsconfig.tsbuildinfo
apps/web/src/app/: globals.css  layout.tsx  page.tsx
apps/web/src/app/api/chat/: route.ts
apps/web/src/components/chat/: chat-input.tsx  chat-interface.tsx  message-item.tsx  message-list.tsx  tool-call-display.tsx
apps/web/src/components/ui/: badge.tsx  button.tsx
apps/web/src/effects/: chat.ts  tools.ts
apps/web/src/layers/: AILayer.ts  ChatLayer.ts  ConfigLayer.ts  MCPLayer.ts
apps/web/src/lib/: utils.ts
apps/web/src/lib/effect/: errors.ts  layers.ts  runtime.ts
apps/web/src/lib/effect/services/: chat-service.ts  mcp-client.ts
apps/web/src/lib/schemas/: index.ts
apps/web/src/services/: AIService.ts  ChatService.ts  ConfigService.ts  MCPService.ts
