[package]
name = "mcp-server"
version = "0.1.0"
edition = "2021"
description = "MCP tool server exposing time, calculator, and mock weather tools"

[[bin]]
name = "mcp-server"
path = "src/main.rs"

[dependencies]
# Official Rust MCP SDK — handles the JSON-RPC protocol over stdio
rmcp = { version = "0.1", features = ["server", "transport-io"] }

# Async runtime
tokio = { version = "1", features = ["full"] }

# Serialisation — required for tool schemas and responses
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Error handling ergonomics
anyhow = "1"

# Timestamp formatting for get_current_time tool
chrono = { version = "0.4", features = ["serde"] }

# Safe arithmetic expression evaluator for the calculate tool
evalexpr = "11"

# Structured logging — MCP uses stdout for protocol, so we log to stderr
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
